fix(storage-optimization): fixed the way the threads are being handled by app (#35)
## What this PR does

1. Row cap + truncation flag
  - QueryResult has a new truncated: boolean field
- QueryExecutor and FederatedQueryExecutor both cap at 10,000 rows and
set the flag
- ResultsTable shows an amber warning banner with a hint to add
LIMIT/WHERE when truncated

 2. HikariCP adaptive sizing + resilience knobs
- DuckDB pools: always size 1 (file-based, internal scheduler handles
parallelism)
- Network DBs (Postgres, MySQL, etc.): min(user-config, max(2, cpus/2))
— caps at half the CPUs
- connectionTimeout 5s (was 30s), keepaliveTime 60s, idleTimeout 5m,
maxLifetime 30m, minimumIdle 1

 3. DuckDB thread + memory budgeting
- Each DuckDB instance gets threads = max(1, cpus/2) — leaves half the
cores free for the JVM and other namespaces
- memory_limit = max(256, jvmMaxMB/4) MB — DuckDB gets at most 25% of
JVM heap

 4. Pool warm-up + startup validation
- ConnectionRegistry.warmUp() eagerly borrows a connection from each
pool, marks failures as unhealthy
- App.java calls warm-up before starting the HTTP server; logs
healthy/unhealthy counts

 5. Health gate
  - New GET /health → { status: "ready", pools: N, startedAt: ... }
- App.jsx polls /health with exponential backoff (100ms → 150ms → … → 3s
cap) before draft restore
- Splash screen now reflects actual backend readiness, no more
console-flooding retries

 6. DuckDB-native ATTACH federation
- When all referenced namespaces are local DuckDB files, the federated
executor uses ATTACH instead of Calcite — full columnar vectorized
execution, native predicate
  pushdown, no Java-side in-memory join
- Falls back to Calcite automatically if ATTACH fails or if any
namespace is a different engine

## Type of change

- [ ] New feature
- [X] Bug fix
- [ ] Documentation update
- [X] Test coverage
- [X] Refactor / cleanup
- [X] Build / CI change

## Changes

Mentioned above

## Tests

- [ ] Unit tests added / updated
- [ ] Integration